{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 185,
  "lineage": "653b5213-e4ee-d0b3-a617-294acd227321",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "internal-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.1.0.30",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-25T21:23:33.001-07:00",
            "description": "Ip internal to service ingress",
            "id": "projects/test-eq-393918/regions/us-central1/addresses/eq",
            "name": "eq",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "test-eq-393918",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/regions/us-central1/addresses/eq",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/regions/us-central1/subnetworks/subnet-test"
          },
          "dependencies": [
            "data.google_project.project-name",
            "google_compute_network.vpc-test",
            "google_compute_subnetwork.subnet-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-25T19:30:15.482-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-eq-393918/global/firewalls/allow-access",
            "log_config": [],
            "name": "allow-access",
            "network": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/global/networks/vpc-test",
            "priority": 500,
            "project": "test-eq-393918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/global/firewalls/allow-access",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_project.project-name",
            "google_compute_network.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "8080",
                  "1000-2000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-25T19:50:57.442-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-eq-393918/global/firewalls/allow-ssh-http",
            "log_config": [],
            "name": "allow-ssh-http",
            "network": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/global/networks/vpc-test",
            "priority": 1000,
            "project": "test-eq-393918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/global/firewalls/allow-ssh-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "test-eq"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_project.project-name",
            "google_compute_network.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "test-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230724",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/zones/us-central1-a/disks/test-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test-eq-393918/zones/us-central1-a/instances/test-bastion",
            "instance_id": "719031563461659533",
            "label_fingerprint": "p1ty_9HoBk0=",
            "labels": {
              "env": "test"
            },
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "o8aUlsAGoUI=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt update -y \nwait 5\nsudo apt upgrade -y \nwait 6\nsudo apt install ansible -y \nsudo apt-get install ca-certificates curl gnupg apt-transport-https software-properties-common  -y\nsudo install -m 0755 -d /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\nsudo chmod a+r /etc/apt/keyrings/docker.gpg\necho \\\n  \"deb [arch=\"$(dpkg --print-architecture)\" sign [...]
            "name": "test-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.133.43.214",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/global/networks/vpc-test",
                "network_ip": "10.1.0.44",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/regions/us-central1/subnetworks/subnet-test",
                "subnetwork_project": "test-eq-393918"
              }
            ],
            "project": "test-eq-393918",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/zones/us-central1-a/instances/test-bastion",
            "service_account": [
              {
                "email": "sa-access-resosurce@test-eq-393918.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/test-eq-393918/global/networks/vpc-test",
            "mtu": 0,
            "name": "vpc-test",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "test-eq-393918",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/global/networks/vpc-test"
          },
          "dependencies": [
            "data.google_project.project-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-25T16:59:29.143-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/test-eq-393918/regions/us-central1/subnetworks/subnet-test",
            "ip_cidr_range": "10.1.0.0/22",
            "name": "subnet-test",
            "network": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/global/networks/vpc-test",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test-eq-393918",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.32.0.0/14",
                "range_name": "gke-test-eq-pods-0c19aab5"
              },
              {
                "ip_cidr_range": "10.0.0.0/20",
                "range_name": "gke-test-eq-services-0c19aab5"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-eq-393918/regions/us-central1/subnetworks/subnet-test",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "data.google_project.project-name",
            "google_compute_network.vpc-test"
          ]
        }
      ]
    }
  ]
}